--- a/index.html
+++ b/index.html
@@ -3,75 +3,74 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style type="text/css">
-        html{
-        	background-image: url('bg.jpg');
-        	background-repeat:no-repeat;
-        	/*background-attachment:fixed;*/
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style type="text/css">
+		html{
+			background-image: url('bg.jpg');
+			background-repeat:no-repeat;
+			/*background-attachment:fixed;*/
 			background-position:center; 
-        }
-        h1, h2, h3, h4, h5{
-        	font-family: "Futura","Helvetica", "Arial", Sans-serif;
-        }
-        h1{
-        	font-size: 2.5em;
-        	color: rgb(220,220,220);
-        	text-shadow: 3px 3px rgba(0,0,0,0.7);
-        	margin-bottom: 0.2em;
-        }
+		}
+		h1, h2, h3, h4, h5{
+			font-family: "Futura","Helvetica", "Arial", Sans-serif;
+		}
+		h1{
+			font-size: 2.5em;
+			color: rgb(220,220,220);
+			text-shadow: 3px 3px rgba(0,0,0,0.7);
+			margin-bottom: 0.2em;
+		}
 
-        h3 {
-        	color: rgb(220,220,220);
-        	text-shadow: 2px 2px rgba(0,0,0,0.5);
-        	
-        }
+		h3 {
+			color: rgb(220,220,220);
+			text-shadow: 2px 2px rgba(0,0,0,0.5);
 
-        a:hover, a:visited, a{
-        	color:rgb(180,180,180);
-        	font-weight:bold;
-        	text-decoration:none;
-        	text-shadow: 2px 2px rgba(0,0,0,0.5);
-        }
+		}
+
+		a:hover, a:visited, a{
+			color:rgb(180,180,180);
+			font-weight:bold;
+			text-decoration:none;
+			text-shadow: 2px 2px rgba(0,0,0,0.5);
+		}
 
 
-        #content{
-        	width:30%;
-        	margin: 40% auto auto auto;
-        	text-align: center;
-        }
+		#content{
+			width:30%;
+			margin: 40% auto auto auto;
+			text-align: center;
+		}
 
-        </style>
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    </head>
-    <body>
+	</style>
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+</head>
+<body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+            <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <div id="content">
-        <h1> Horizon </h1>
-        <h3>Coming Soon.</h3>
-        <h5><a href="http://twitter.com/omershapira">@omershapira</a></h5>
-        </div>
+            <!-- Add your site or application content here -->
+            <div id="content">
+            	<h1> Horizon </h1>
+            	<h3>Coming Soon.</h3>
+            	<h5><a href="http://twitter.com/omershapira">@omershapira</a></h5>
+            </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            // e.src='//www.google-analytics.com/analytics.js';
-            // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            // ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
-</html>
+            <script>
+            	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            	ga('create', 'UA-50976622-1', 'horizongame.cc');
+            	ga('send', 'pageview');
+
+            </script>
+        </body>
+        </html>
